--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
     
+   <!--   <meta-data android:name="com.google.android.gms.version"
+           android:value="@integer/" /> -->
+    
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-sdk
@@ -12,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/swiftalk_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
