--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.ednovak.swiftalk"
     android:versionCode="1"
-    android:versionName="1.0" >
-    
-   <!--   <meta-data android:name="com.google.android.gms.version"
-           android:value="@integer/" /> -->
+    android:versionName="1.1" >
     
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+  	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -18,6 +18,10 @@
         android:icon="@drawable/swiftalk_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data android:name="com.google.android.gms.version"
+           android:value="@integer/google_play_services_version" />
+        
         <activity
             android:name="net.ednovak.swiftalk.SoundManager"
             android:label="@string/app_name"
@@ -28,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        
     </application>
 
 </manifest>
